--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -10,7 +10,8 @@ add_library( # 参数 1 : 设置生成的动态库名称
 
         # 参数 3 : 配置要编译的源文件
         native-lib.cpp
-        FFMPEG.cpp)
+        FFMPEG.cpp
+        JavaCallHelper.cpp)
 
 # III . 到预设的目录查找 log 库 , 将找到的路径赋值给 log-lib
 #       这个路径是 NDK 的 ndk-bundle\platforms\android-29\arch-arm\usr\lib\liblog.so
